# ClipFlow

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.superpowers/brainstorm/motion-preview-20260504/state/: server-stopped
artifacts/: motion-concepts.html
src/: App.tsx  demoData.ts  main.tsx  tauriClient.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  commands.rs  error.rs  history.rs  lib.rs  main.rs  models.rs  paste.rs  system.rs
src/components/: ConfirmDialog.tsx  DesktopResizeZones.tsx  SearchPanel.test.tsx  SearchPanel.tsx  SearchPanelParts.tsx  SettingsConcepts.tsx  SettingsPage.test.tsx  SettingsPage.tsx  SettingsPageRows.tsx  SettingsPageSections.tsx  SettingsPanel.tsx
src/domain/: clipSearch.test.ts  clipSearch.ts  copySound.ts  desktopWindow.test.ts  desktopWindow.ts  motion.test.ts  motion.ts  shortcuts.ts  theme.ts  types.ts
src/styles/: app.css  concepts-responsive.css  concepts.css  list.css  panel.css  settings.css  tokens.css
