[package]
name = "clipflow"
version = "0.1.0"
description = "ClipFlow clipboard manager"
authors = ["ClipFlow"]
edition = "2021"

[lib]
name = "clipflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3.4"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Registry", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
windows-icons = "0.3"
